# sdk_fastapi

./: .env.example  .gitignore  CLEAN_VERSION_INFO.md  CLI_COMMANDS_REFERENCE.md  DASHBOARD_SYSTEM_DOCUMENTATION.md  DOCUMENTACION_COMPLETA_SDK_DICIEMBRE_2025.md  GUIA_COMPLETA_SDK_MICROSERVICIOS.md  LICENSE  QUICK_START.py  README.md  RESUMEN_EJECUTIVO_SDK_FINAL.md  SDK_FINAL_COMPLETION_REPORT.md  create_service.py  demo_interactivo.py  docker-compose-6-services.yml  install_ocr_dependencies.py  pyproject.toml  requirements.txt  run_all_tests.py  setup.py  situacion_actual.md  test_6_services.py  test_ocr_service.py  test_sdk_demo.py
.kiro/specs/basic-services-implementation/: design.md  requirements.md  tasks.md
.kiro/specs/communication/: design.md  requirements.md  tasks.md
.kiro/specs/database/: design.md  requirements.md  tasks.md
.kiro/specs/observability/: design.md  requirements.md  tasks.md
.kiro/specs/security-advanced/: design.md  requirements.md  tasks.md
.kiro/specs/system-integration-testing/: requirements.md  tasks.md
.kiro/specs/templates/: design.md  requirements.md  tasks.md
.kiro/specs/web-dashboard-advanced/: design.md  requirements.md  tasks.md
auth-service/: README.md  config.py  main.py  requirements.txt
docs/: compatibility.md  index.md  installation.md  migration_guide.md  quickstart.md
docs/communication/: advanced_policies.md  communication_manager.md  configuration.md  enhanced_http_client.md  grpc.md  http_client.md  index.md  logging.md  messaging.md  protocols.md
docs/security/: abac.md
docs/templates/: api-gateway-template.md  event-service-template.md  index.md  monitoring-service-template.md  project-creation-cli.md  test-generator.md
docs/tutorials/: basic_setup.md  creating_first_service.md  deployment.md  service_communication.md  service_discovery.md
examples/: abac_example.py  advanced_api_generator_example.py  advanced_crud_generator_example.py  advanced_observability_manager_example.py  advanced_optimization_example.py  advanced_policies_example.py  alert_system_example.py  api_gateway_template_example.py  apm_example.py  audit_logging_compliance_example.py  auth_service_template_example.py  cli_framework_example.py  communication_manager_example.py  consul_advanced_example.py  dashboard_system_example.py  data_service_template_example.py  database_adapters_example.py  database_caching_example.py  database_foundation_example.py  database_manager_example.py  database_migrations_example.py  database_monitoring_example.py  enhanced_http_client_example.py  etcd_kubernetes_advanced_example.py  event_service_template_example.py  grpc_server_example.py  grpc_streaming_example.py  health_analytics_example.py  health_monitoring_kubernetes_example.py  intelligent_alerting_example.py  jaeger_advanced_tracing_example.py  message_broker_base_example.py  mongodb_adapter_example.py  monitoring_service_template_example.py  mysql_adapter_example.py  observability_foundation_example.py  opentelemetry_tracing_example.py  postgresql_adapter_example.py  project_creation_cli_example.py  project_manager_example.py  (+12 more)
fastapi_microservices_sdk/: __init__.py  config.py  constants.py  exceptions.py  version.py
fastapi_microservices_sdk/cli/: __init__.py  main.py
fastapi_microservices_sdk/cli/commands/: __init__.py  create.py  deploy.py  discover.py  generate.py  init.py  monitor.py
fastapi_microservices_sdk/cli/templates/: __init__.py  docker_compose_template.yml  microservice_config.yml  service_template.py
fastapi_microservices_sdk/cli/utils/: __init__.py  console.py  file_manager.py  logger.py  project_detector.py  validator.py
fastapi_microservices_sdk/communication/: __init__.py  config.py  exceptions.py  logging.py  manager.py
fastapi_microservices_sdk/communication/discovery/: __init__.py  base.py  cache.py  consul.py  etcd.py  health.py  kubernetes.py  registry.py
fastapi_microservices_sdk/communication/grpc/: __init__.py  client.py  codegen.py  proto_generator.py  server.py  streaming.py
fastapi_microservices_sdk/core/: __init__.py  microservice.py  service_factory.py  service_registry.py
fastapi_microservices_sdk/database/: __init__.py  config.py  exceptions.py  manager.py  manager_.py
fastapi_microservices_sdk/deploy/: __init__.py
fastapi_microservices_sdk/discovery/: __init__.py
fastapi_microservices_sdk/generators/: __init__.py  api_generator.py  database_generator.py  docker_generator.py  k8s_generator.py  model_generator.py  service_generator.py
fastapi_microservices_sdk/monitoring/: __init__.py
fastapi_microservices_sdk/observability/: __init__.py  advanced_manager.py  advanced_manager_complex_backup.py  config.py  exceptions.py  manager.py
fastapi_microservices_sdk/security/: __init__.py  config.py
fastapi_microservices_sdk/templates/: __init__.py  config.py  engine.py  exceptions.py  generators.py  manager.py  registry.py
fastapi_microservices_sdk/utils/: __init__.py  async_utils.py  formatters.py  helpers.py  migration_tools.py  validators.py
fastapi_microservices_sdk/web/: __init__.py  app.py
file-storage-service/: Dockerfile  main.py
fs-user-service/: .env.example  .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml  requirements.txt
fs-user-service/app/: __init__.py  auth.py  health.py  users.py
fs-user-service/tests/: test_main.py
monitoring-service/: Dockerfile  main.py
notification-service/: Dockerfile  main.py
ocr-service/: Dockerfile  README.md  main.py  requirements.txt
ocr-service/static/: index.html  styles.css
test-api-gateway/: .gitignore  Dockerfile  README.md  config.py  docker-compose.yml  main.py  requirements.txt
test-api-gateway/app/: gateway.py  health.py  middleware.py
tests/integration/: __init__.py  test_abac_middleware.py  test_auth_integration.py  test_deployment_flow.py  test_discovery_flow.py  test_fastapi_integration.py  test_full_system.py  test_security_end_to_end.py  test_service_communication.py  test_unified_security_integration.py
tests/performance/: test_performance_benchmarks.py
(+385 files in other folders)
